# CenterPoint

./: .gitignore  README.md  create_data.sh  download_work_dirs.sh  test.sh
centerpoint_ws/src/centerpoint_ros_msgs/: CMakeLists.txt  package.xml
centerpoint_ws/src/centerpoint_ros_msgs/action/: CloudCheckForObjects.action
det3d/core/input/: voxel_generator.py
det3d/models/bbox_heads/: center_head.py
det3d/ops/point_cloud/: point_cloud_ops.py
docker/: Dockerfile  build.sh  entrypoint.sh  requirements.txt  run.sh
docker/.local/share/jupyter/runtime/: notebook_cookie_secret
docker_deprecated/: Dockerfile  requirements.txt  run.sh  run_no_rm.sh  setup.sh
tools/: demo.py  demo_utils.py  single_inference.py
tools/nusc_tracking/: pub_tracker.py
